devide the page to 2 sections(aside, home)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
+    <!-- ==== Main container start ==== -->
+     <div class="main-container">
+        <!-- ==== Aside start ==== -->
+         <div class="aside">
+            aside
+         </div>
+         <!-- ==== Main content start ==== -->
+          <div class="main-content">
+            <!-- ==== Home Section start ==== -->
+             <section class="home section">
+                Home
+             </section>
+            <!-- ==== Home Section end ==== --> 
+          </div>
+         <!-- ==== Main content end ==== --> 
+        <!-- ==== Aside end ==== --> 
+     </div>
+    <!-- ==== Main container end ==== -->
     
 </body>
 </html>
