home section with basic details

--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
           <div class="main-content">
             <!-- ==== Home Section start ==== -->
              <section class="home section">
-                Home
+                <div class="container">
+                    <div class="row">
+                        <div class="home-info padd-15">
+                            <h3 class="hello">Hello, my name is <span class="name">Kaveesha Waduge</span> </h3>
+                            <h3 class="my-profession">I'm a <span class="typing">Web Designer</span> </h3>
+                            <p>I'm a web designer with extensive experience for over 2 years. My expertise is to
+                                create and website design, graphic design, and manny more...</p>
+                                <a href="#contact" class="btn hire-me">Hire Me</a>
+                        </div>
+                        <div class="home-img padd-15">
+                            <img src="images/Kaveesha.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
              </section>
             <!-- ==== Home Section end ==== --> 
           </div>
