--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <!-- ==== Main content start ==== -->
           <div class="main-content">
             <!-- ==== Home Section start ==== -->
-             <section class="home section">
+             <section class="home section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -47,7 +47,58 @@
                     </div>
                 </div>
              </section>
-            <!-- ==== Home Section end ==== --> 
+            <!-- ==== Home Section end ==== -->
+            <!-- ==== About Section start ==== -->
+
+            <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3>I'm Kaveesha Waduge and <span>Web Developer</span> </h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae maxime odio aperiam ab dicta beatae.</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                               <div class="personal-info padd-15">
+                                <div class="row">
+                                    <div class="info-item padd-15">
+                                        <p>Birthday : <span>31 May 2001</span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>Age : <span>23</span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>Email : <span>kaveeshewaduge111@gmail.com</span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>Degree : <span>Bsc(Honours) in Software Engineering</span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>Phone : <span>076 1765950</span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>City : <span>Galle, Sri Lanka</span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>Freelance : <span>Available</span></p>
+                                    </div>
+                                </div>
+                               </div>
+                               <div class="skills padd-15">Skills</div> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+             
+            <!-- ==== About Section end ==== --> 
           </div>
          <!-- ==== Main content end ==== --> 
         <!-- ==== Aside end ==== --> 
