--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <!-- ==== Main content start ==== -->
           <div class="main-content">
             <!-- ==== Home Section start ==== -->
-             <section class="home section hidden">
+             <section class="home section">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -90,8 +90,134 @@
                                         <p>Freelance : <span>Available</span></p>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="buttons padd-15">
+                                        <a href="#" class="btn">Download CV</a>
+                                        <a href="#contact" class="btn hire-me">Hire Me</a>
+                                    </div>
+                                </div>
                                </div>
-                               <div class="skills padd-15">Skills</div> 
+                               <div class="skills padd-15">
+                                <div class="row">
+                                    <div class="skill-item padd-15">
+                                        <h5>CSS</h5>
+                                        <div class="progress">
+                                            <div class="progress-in" style="width: 86%;"></div>
+                                            <div class="skill-precent">86%</div>
+                                        </div>
+                                    </div>
+                                    <div class="skill-item padd-15">
+                                        <h5>JS</h5>
+                                        <div class="progress">
+                                            <div class="progress-in" style="width: 76%;"></div>
+                                            <div class="skill-precent">76%</div>
+                                        </div>
+                                    </div>
+                                    <div class="skill-item padd-15">
+                                        <h5>HTML</h5>
+                                        <div class="progress">
+                                            <div class="progress-in" style="width: 96%;"></div>
+                                            <div class="skill-precent">96%</div>
+                                        </div>
+                                    </div>
+                                    <div class="skill-item padd-15">
+                                        <h5>PHP</h5>
+                                        <div class="progress">
+                                            <div class="progress-in" style="width: 66%;"></div>
+                                            <div class="skill-precent">66%</div>
+                                        </div>
+                                    </div>
+                                    <div class="skill-item padd-15">
+                                        <h5>Bootstrap</h5>
+                                        <div class="progress">
+                                            <div class="progress-in" style="width: 76%;"></div>
+                                            <div class="skill-precent">76%</div>
+                                        </div>
+                                    </div>
+                                    <div class="skill-item padd-15">
+                                        <h5>Java</h5>
+                                        <div class="progress">
+                                            <div class="progress-in" style="width: 80%;"></div>
+                                            <div class="skill-precent">80%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                               </div> 
+                            </div>
+
+                            <div class="row">
+                                <div class="education padd-15">
+                                    <h3 class="title">Education</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- ===== timeline item ===== -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2015 - 2017
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ordinary Level</h4>
+                                                    <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores deserunt tenetur alias natus iusto similique?</p>
+                                                </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2015 - 2017
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ordinary Level</h4>
+                                                    <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores deserunt tenetur alias natus iusto similique?</p>
+                                                </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2015 - 2017
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ordinary Level</h4>
+                                                    <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores deserunt tenetur alias natus iusto similique?</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="experience padd-15">
+                                    <h3 class="title">Experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- ===== timeline item ===== -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2015 - 2017
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ordinary Level</h4>
+                                                    <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores deserunt tenetur alias natus iusto similique?</p>
+                                                </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2015 - 2017
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ordinary Level</h4>
+                                                    <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores deserunt tenetur alias natus iusto similique?</p>
+                                                </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2015 - 2017
+                                                    </h3>
+                                                    <h4 class="timeline-title">Ordinary Level</h4>
+                                                    <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores deserunt tenetur alias natus iusto similique?</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
