--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <!-- ==== Main content start ==== -->
           <div class="main-content">
             <!-- ==== Home Section start ==== -->
-             <section class="home section">
+             <section class="home section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -50,7 +50,7 @@
             <!-- ==== Home Section end ==== -->
             <!-- ==== About Section start ==== -->
 
-            <section class="about section">
+            <section class="about section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -225,6 +225,81 @@
             </section>
              
             <!-- ==== About Section end ==== --> 
+
+            <!-- ==== Services Section start ==== -->
+             <section class="service section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Services</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- ==== Service item start ==== -->
+                         <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-mobile-alt"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores optio magnam.</p>
+                            </div>
+                         </div>
+
+                         <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-laptop-code"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores optio magnam.</p>
+                            </div>
+                         </div>
+
+                         <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-palette"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores optio magnam.</p>
+                            </div>
+                         </div>
+
+                         <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-code"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores optio magnam.</p>
+                            </div>
+                         </div>
+
+                         <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores optio magnam.</p>
+                            </div>
+                         </div>
+
+                         <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-bullhorn"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores optio magnam.</p>
+                            </div>
+                         </div>
+                        <!-- ==== Service item end ==== -->
+                    </div>
+                </div>
+             </section>
+            <!-- ==== Services Section end ==== -->
           </div>
          <!-- ==== Main content end ==== --> 
         <!-- ==== Aside end ==== --> 
