--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <!-- ==== About Section end ==== --> 
 
             <!-- ==== Services Section start ==== -->
-             <section class="service section">
+             <section class="service section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -300,6 +300,74 @@
                 </div>
              </section>
             <!-- ==== Services Section end ==== -->
+
+            <!-- ==== Portfolio Section start ==== -->
+             <section class="portfolio section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Portfolio</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="portfolio-heading padd-15">
+                            <h2>My Last Project :</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                       <!-- ==== Portfolio item start ==== -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="images/portfolio1.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="images/portfolio1.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="images/portfolio1.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="images/portfolio1.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="images/portfolio1.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="images/portfolio1.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                       <!-- ==== Portfolio item end ==== --> 
+                    </div>
+                </div>
+             </section>
+            <!-- ==== Portfolio Section end ==== -->
           </div>
          <!-- ==== Main content end ==== --> 
         <!-- ==== Aside end ==== --> 
