personal contact details add

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <!-- ==== Services Section end ==== -->
 
             <!-- ==== Portfolio Section start ==== -->
-             <section class="portfolio section">
+             <section class="portfolio section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -368,6 +368,48 @@
                 </div>
              </section>
             <!-- ==== Portfolio Section end ==== -->
+
+            <!-- ==== Contact Section start ==== -->
+             <section class="contact section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Contact Me</h2>
+                        </div>
+                    </div>
+                    <h3 class="contact-title">Have You Any Questions ?</h3>
+                    <h4 class="contact-sub-title">I"M AT YOUR SERVICE</h4>
+                    <div class="row">
+                        <!-- ==== Contact item start ==== -->
+
+                         <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-phone"></i></div>
+                            <h4>Call Us On</h4>
+                            <p>076 1765950</p>
+                         </div>
+
+                         <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
+                            <h4>University</h4>
+                            <p>NSBM Grreen University</p>
+                         </div>
+
+                         <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-envelope"></i></div>
+                            <h4>Email</h4>
+                            <p>kaveeshewaduge111@gmail.com</p>
+                         </div>
+
+                         <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-globe-europe"></i></div>
+                            <h4>Website</h4>
+                            <p>www.ilustradora.com</p>
+                         </div>
+                        <!-- ==== Contact item end ==== -->
+                    </div>
+                </div>
+             </section>
+            <!-- ==== Contact Section end ==== -->
           </div>
          <!-- ==== Main content end ==== --> 
         <!-- ==== Aside end ==== --> 
