--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <!-- ==== Main content start ==== -->
           <div class="main-content">
             <!-- ==== Home Section start ==== -->
-             <section class="home section hidden">
+             <section class="home section">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -50,7 +50,7 @@
             <!-- ==== Home Section end ==== -->
             <!-- ==== About Section start ==== -->
 
-            <section class="about section hidden">
+            <section class="about section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -227,7 +227,7 @@
             <!-- ==== About Section end ==== --> 
 
             <!-- ==== Services Section start ==== -->
-             <section class="service section hidden">
+             <section class="service section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -302,7 +302,7 @@
             <!-- ==== Services Section end ==== -->
 
             <!-- ==== Portfolio Section start ==== -->
-             <section class="portfolio section hidden">
+             <section class="portfolio section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -377,8 +377,8 @@
                             <h2>Contact Me</h2>
                         </div>
                     </div>
-                    <h3 class="contact-title">Have You Any Questions ?</h3>
-                    <h4 class="contact-sub-title">I"M AT YOUR SERVICE</h4>
+                    <h3 class="contact-title padd-15">Have You Any Questions ?</h3>
+                    <h4 class="contact-sub-title padd-15">I"M AT YOUR SERVICE</h4>
                     <div class="row">
                         <!-- ==== Contact item start ==== -->
 
@@ -407,6 +407,51 @@
                          </div>
                         <!-- ==== Contact item end ==== -->
                     </div>
+
+                    <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
+                    <h4 class="contact-sub-title padd-15">I"M VERY RESPONSIVE TO MESSAGE</h4>
+
+                    <!-- ==== Contact form start ==== -->
+                     <div class="row">
+                        <div class="contact-form padd-15">
+                            <div class="row">
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                       <input type="text" class="form-control" placeholder="Name"> 
+                                    </div>
+                                </div>
+
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                       <input type="email" class="form-control" placeholder="Email"> 
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <div class="form-group">
+                                       <input type="text" class="form-control" placeholder="Subject"> 
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <div class="form-group">
+                                       <textarea class="form-control" placeholder="Message"></textarea> 
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <button type="submit" class="btn">Send Message</button>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                    <!-- ==== Contact form end ==== -->
                 </div>
              </section>
             <!-- ==== Contact Section end ==== -->
