--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
         <!-- ==== Aside start ==== -->
          <div class="aside">
             <div class="logo">
-                <a href="#"><span>Ilustra</span>dora</a>
+                <a href="#home"><span>Ilustra</span>dora</a>
             </div>
             <div class="nav-toggler">
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="#" class="active" ><i class="fa fa-home"></i> Home </a></li>
-                <li><a href="#"><i class="fa fa-user"></i> About </a></li>
-                <li><a href="#"><i class="fa fa-list"></i> Services </a></li>
-                <li><a href="#"><i class="fa fa-briefcase"></i> Portfolio </a></li>
-                <li><a href="#"><i class="fa fa-comments"></i> Contact </a></li>
+                <li><a href="#home" class="active" ><i class="fa fa-home"></i> Home </a></li>
+                <li><a href="#about"><i class="fa fa-user"></i> About </a></li>
+                <li><a href="#services"><i class="fa fa-list"></i> Services </a></li>
+                <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio </a></li>
+                <li><a href="#contact"><i class="fa fa-comments"></i> Contact </a></li>
             </ul>
          </div>
          <!-- ==== Main content start ==== -->
           <div class="main-content">
             <!-- ==== Home Section start ==== -->
-             <section class="home section">
+             <section class="home section" id="home">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -58,7 +58,7 @@
             <!-- ==== Home Section end ==== -->
             <!-- ==== About Section start ==== -->
 
-            <section class="about section">
+            <section class="about section" id="about">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -235,7 +235,7 @@
             <!-- ==== About Section end ==== --> 
 
             <!-- ==== Services Section start ==== -->
-             <section class="service section">
+             <section class="service section" id="services">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -310,7 +310,7 @@
             <!-- ==== Services Section end ==== -->
 
             <!-- ==== Portfolio Section start ==== -->
-             <section class="portfolio section">
+             <section class="portfolio section" id="portfolio">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -378,7 +378,7 @@
             <!-- ==== Portfolio Section end ==== -->
 
             <!-- ==== Contact Section start ==== -->
-             <section class="contact section">
+             <section class="contact section" id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
